# Unreleased
- [change][major] Use `$` for placeholders instead of `#`.
- [add][minor] Add support for custom row/error converion functions.
- [change][patch] Improve span for errors when a type does not implement `ToSql`.
- [change][patch] Improve error messages when `client` is not defined.

# Version 0.1.4 - 2024-03-06
- [fix][minor] Do not combine `#` with preceeding punctuation.

# Version 0.1.3 - 2024-03-06
- [fix][minor] Combine consecutive punctuation tokens in queries into a single string without space between the punctuation.

# Version 0.1.2 - 2024-03-05
- [fix][minor] Pin macro version to exact same version as main crate.

# Version 0.1.1 - 2024-03-05
- [add][minor] Allow query function to return `Result<(), E>`.
- [add][patch] Add documentation.

# Version 0.1.0 - 2024-03-04
- [add][major] Initial with support for `tokio_postgres` only.